sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_id_empty/errors.duarouter
Error: Missing id of a 'vehicle'-object.
Quitting (on error).
